// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test experiences component verify snapshot for larger display 1`] = `
<DocumentFragment>
  .c0 {
  height: 40px;
}

<div
    class="MuiBox-root css-wy212j"
    id="experiences-section"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1fim401-MuiTypography-root"
    >
      Experiences
    </h3>
    <ul
      class="MuiTimeline-root MuiTimeline-positionRight css-55vwbm-MuiTimeline-root"
    >
      <li
        class="MuiTimelineItem-root MuiTimelineItem-positionRight css-ny8qih-MuiTimelineItem-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body2 MuiTimelineOppositeContent-root MuiTimelineOppositeContent-positionRight css-198yjjm-MuiTypography-root-MuiTimelineOppositeContent-root"
        >
          <div
            class="MuiBox-root css-v7v99c"
          >
            Oct 2021 - Present
          </div>
        </div>
        <div
          class="MuiTimelineSeparator-root css-1fe7e6p-MuiTimelineSeparator-root"
        >
          <span
            class="MuiTimelineConnector-root css-1ami7lv-MuiTimelineConnector-root"
          />
          <span
            class="MuiTimelineDot-root MuiTimelineDot-filled MuiTimelineDot-filledPrimary css-7kp53o-MuiTimelineDot-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="AccessTimeFilledIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm3.3 14.71L11 12.41V7h2v4.59l3.71 3.71-1.42 1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTimelineConnector-root css-1ami7lv-MuiTimelineConnector-root"
          />
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTimelineContent-root MuiTimelineContent-positionRight css-ghevlx-MuiTypography-root-MuiTimelineContent-root"
        >
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-2l7wv8-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-out6mg"
              >
                <img
                  alt="Thoughtworks logo"
                  class="c0"
                  src="test-file-stub"
                />
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle1 css-1wwkujw-MuiTypography-root"
                  >
                    Full Stack Developer
                  </h6>
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 css-37mko6-MuiTypography-root"
                  >
                    Bangalore, IN
                  </h6>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1oetjkv-MuiTypography-root"
              >
                Thoughtworks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.
              </p>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
              >
                ACCOMPLISHMENTS
              </h6>
              <ul>
                <li
                  style="text-align: justify;"
                >
                  Building a e-commerce website from scratch using ReactJS, Spring Boot, Microservices, Material Design etc with a team of 15 members
                </li>
                <li
                  style="text-align: justify;"
                >
                  Done initial setup of UI repo as Mono repo using yarn workspace with eslint, stylelint, prettier, husky pre-commit hook, lint-staged and jest for testing
                </li>
                <li
                  style="text-align: justify;"
                >
                  Created Backend API for product details page with basic product details, quanitity, prices, dealers etc
                </li>
              </ul>
            </div>
          </div>
        </div>
      </li>
      <li
        class="MuiTimelineItem-root MuiTimelineItem-positionRight css-ny8qih-MuiTimelineItem-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body2 MuiTimelineOppositeContent-root MuiTimelineOppositeContent-positionRight css-198yjjm-MuiTypography-root-MuiTimelineOppositeContent-root"
        >
          <div
            class="MuiBox-root css-v7v99c"
          >
            Jun 2019 - Oct 2021
          </div>
        </div>
        <div
          class="MuiTimelineSeparator-root css-1fe7e6p-MuiTimelineSeparator-root"
        >
          <span
            class="MuiTimelineConnector-root css-1ami7lv-MuiTimelineConnector-root"
          />
          <span
            class="MuiTimelineDot-root MuiTimelineDot-filled MuiTimelineDot-filledPrimary css-7kp53o-MuiTimelineDot-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="AccessTimeFilledIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm3.3 14.71L11 12.41V7h2v4.59l3.71 3.71-1.42 1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTimelineConnector-root css-1ami7lv-MuiTimelineConnector-root"
          />
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTimelineContent-root MuiTimelineContent-positionRight css-ghevlx-MuiTypography-root-MuiTimelineContent-root"
        >
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-2l7wv8-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-out6mg"
              >
                <img
                  alt="IBM logo"
                  class="c0"
                  src="test-file-stub"
                />
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle1 css-1wwkujw-MuiTypography-root"
                  >
                    Full Stack Developer
                  </h6>
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 css-37mko6-MuiTypography-root"
                  >
                    Bangalore, IN
                  </h6>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1oetjkv-MuiTypography-root"
              >
                International Business Machines Corporation is an American multinational technology company headquartered in Armonk, New York, with operations in over 170 countries.
              </p>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
              >
                ACCOMPLISHMENTS
              </h6>
              <ul>
                <li
                  style="text-align: justify;"
                >
                  Working as a full stack developer on a large-scale, cloud-native, and distributed crew logistics solution with tools & technologies like Spring Boot, React.Js, Groovy, Micro-services, Redis, Cassandra, Kafka, Kibana, Grafana, Portainer in an agile team.
                </li>
                <li
                  style="text-align: justify;"
                >
                  Improved live tracking speed by 15% by optimising code
                </li>
                <li
                  style="text-align: justify;"
                >
                  Improved scalability, fault tolerance, and reliability by designing micro-service architecture after event storming with stakeholders.
                </li>
                <li
                  style="text-align: justify;"
                >
                  Completed 400+ user stories and implemented 15+ new features.
                </li>
              </ul>
            </div>
          </div>
        </div>
      </li>
      <li
        class="MuiTimelineItem-root MuiTimelineItem-positionRight css-ny8qih-MuiTimelineItem-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body2 MuiTimelineOppositeContent-root MuiTimelineOppositeContent-positionRight css-198yjjm-MuiTypography-root-MuiTimelineOppositeContent-root"
        >
          <div
            class="MuiBox-root css-v7v99c"
          >
            May 2018 - Jul 2018
          </div>
        </div>
        <div
          class="MuiTimelineSeparator-root css-1fe7e6p-MuiTimelineSeparator-root"
        >
          <span
            class="MuiTimelineConnector-root css-1ami7lv-MuiTimelineConnector-root"
          />
          <span
            class="MuiTimelineDot-root MuiTimelineDot-filled MuiTimelineDot-filledPrimary css-7kp53o-MuiTimelineDot-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="AccessTimeFilledIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm3.3 14.71L11 12.41V7h2v4.59l3.71 3.71-1.42 1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTimelineConnector-root css-1ami7lv-MuiTimelineConnector-root"
          />
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTimelineContent-root MuiTimelineContent-positionRight css-ghevlx-MuiTypography-root-MuiTimelineContent-root"
        >
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-2l7wv8-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-out6mg"
              >
                <img
                  alt="C-DAC logo"
                  class="c0"
                  src="test-file-stub"
                />
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle1 css-1wwkujw-MuiTypography-root"
                  >
                    Machine Learning Trainee
                  </h6>
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 css-37mko6-MuiTypography-root"
                  >
                    Jaipur, IN
                  </h6>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-1oetjkv-MuiTypography-root"
              >
                The Centre for Development of Advanced Computing is an Indian autonomous scientific society, operating under the Ministry of Electronics and Information Technology.
              </p>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
              >
                ACCOMPLISHMENTS
              </h6>
              <ul>
                <li
                  style="text-align: justify;"
                >
                  Gained experience in machine learning using python by working on a project of weather prediction android app which shows weather forecast
                </li>
                <li
                  style="text-align: justify;"
                >
                  Used multi-dimension linear regression model for prediction using 100 years of historical data set using information retrieval
                </li>
              </ul>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`test experiences component verify snapshot for tablet or lesser size display 1`] = `
<DocumentFragment>
  .c0 {
  height: 40px;
}

<div
    class="MuiBox-root css-wy212j"
    id="experiences-section"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1fim401-MuiTypography-root"
    >
      Experiences
    </h3>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-2l7wv8-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      >
        <div
          class="MuiBox-root css-out6mg"
        >
          <img
            alt="Thoughtworks logo"
            class="c0"
            src="test-file-stub"
          />
          <div
            class="MuiBox-root css-0"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-1wwkujw-MuiTypography-root"
            >
              Full Stack Developer
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-37mko6-MuiTypography-root"
            >
              Bangalore, IN
            </h6>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-1oetjkv-MuiTypography-root"
        >
          Thoughtworks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.
        </p>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          ACCOMPLISHMENTS
        </h6>
        <ul>
          <li
            style="text-align: justify;"
          >
            Building a e-commerce website from scratch using ReactJS, Spring Boot, Microservices, Material Design etc with a team of 15 members
          </li>
          <li
            style="text-align: justify;"
          >
            Done initial setup of UI repo as Mono repo using yarn workspace with eslint, stylelint, prettier, husky pre-commit hook, lint-staged and jest for testing
          </li>
          <li
            style="text-align: justify;"
          >
            Created Backend API for product details page with basic product details, quanitity, prices, dealers etc
          </li>
        </ul>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
      >
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Oct 2021 - Present
        </button>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-2l7wv8-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      >
        <div
          class="MuiBox-root css-out6mg"
        >
          <img
            alt="IBM logo"
            class="c0"
            src="test-file-stub"
          />
          <div
            class="MuiBox-root css-0"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-1wwkujw-MuiTypography-root"
            >
              Full Stack Developer
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-37mko6-MuiTypography-root"
            >
              Bangalore, IN
            </h6>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-1oetjkv-MuiTypography-root"
        >
          International Business Machines Corporation is an American multinational technology company headquartered in Armonk, New York, with operations in over 170 countries.
        </p>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          ACCOMPLISHMENTS
        </h6>
        <ul>
          <li
            style="text-align: justify;"
          >
            Working as a full stack developer on a large-scale, cloud-native, and distributed crew logistics solution with tools & technologies like Spring Boot, React.Js, Groovy, Micro-services, Redis, Cassandra, Kafka, Kibana, Grafana, Portainer in an agile team.
          </li>
          <li
            style="text-align: justify;"
          >
            Improved live tracking speed by 15% by optimising code
          </li>
          <li
            style="text-align: justify;"
          >
            Improved scalability, fault tolerance, and reliability by designing micro-service architecture after event storming with stakeholders.
          </li>
          <li
            style="text-align: justify;"
          >
            Completed 400+ user stories and implemented 15+ new features.
          </li>
        </ul>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
      >
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Jun 2019 - Oct 2021
        </button>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-2l7wv8-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      >
        <div
          class="MuiBox-root css-out6mg"
        >
          <img
            alt="C-DAC logo"
            class="c0"
            src="test-file-stub"
          />
          <div
            class="MuiBox-root css-0"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-1wwkujw-MuiTypography-root"
            >
              Machine Learning Trainee
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-37mko6-MuiTypography-root"
            >
              Jaipur, IN
            </h6>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-1oetjkv-MuiTypography-root"
        >
          The Centre for Development of Advanced Computing is an Indian autonomous scientific society, operating under the Ministry of Electronics and Information Technology.
        </p>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          ACCOMPLISHMENTS
        </h6>
        <ul>
          <li
            style="text-align: justify;"
          >
            Gained experience in machine learning using python by working on a project of weather prediction android app which shows weather forecast
          </li>
          <li
            style="text-align: justify;"
          >
            Used multi-dimension linear regression model for prediction using 100 years of historical data set using information retrieval
          </li>
        </ul>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
      >
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          May 2018 - Jul 2018
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
